@@ -4,11 +4,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.enr</groupId>
-  <artifactId>ideal-winner</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
+  <artifactId>system-sources</artifactId>
+  <version>0.0.0-SNAPSHOT</version>
 
-  <name>ideal-winner</name>
-  <url>https://github.com/enr/ideal-winner</url>
+  <name>system-sources</name>
+  <url>https://github.com/enr/system-sources</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,6 +33,18 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit-pioneer</groupId>
+      <artifactId>junit-pioneer</artifactId>
+      <version>2.2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>4.2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -82,82 +94,6 @@
       <build>
         <defaultGoal>verify</defaultGoal>
         <plugins>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-              </execution>
-              <execution>
-                <id>report</id>
-                <phase>prepare-package</phase>
-                <goals>
-                  <goal>report</goal>
-                </goals>
-              </execution>
-              <execution>
-                <id>jacoco-check</id>
-                <goals>
-                  <goal>check</goal>
-                </goals>
-                <configuration>
-                  <rules>
-                    <rule>
-                      <element>PACKAGE</element>
-                      <limits>
-                        <limit>
-                          <counter>LINE</counter>
-                          <value>COVEREDRATIO</value>
-                          <minimum>0.70</minimum>
-                        </limit>
-                      </limits>
-                    </rule>
-                  </rules>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.pitest</groupId>
-            <artifactId>pitest-maven</artifactId>
-            <executions>
-              <execution>
-                <id>mutation-coverage</id>
-                <goals>
-                  <goal>mutationCoverage</goal>
-                </goals>
-                <phase>verify</phase>
-              </execution>
-            </executions>
-            <dependencies>
-              <dependency>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-junit5-plugin</artifactId>
-                <version>1.2.1</version>
-              </dependency>
-            </dependencies>
-            <configuration>
-              <targetClasses>
-                <param>com.github.enr.idealwinner.*</param>
-              </targetClasses>
-              <targetTests>
-                <param>com.github.enr.idealwinner.*</param>
-              </targetTests>
-              <mutators>
-                <mutator>DEFAULTS</mutator>
-              </mutators>
-              <avoidCallsTo>
-                <avoidCallsTo>java.lang.System.Logger</avoidCallsTo>
-                <avoidCallsTo>java.util.logging</avoidCallsTo>
-                <avoidCallsTo>org.apache.log4j</avoidCallsTo>
-                <avoidCallsTo>org.slf4j</avoidCallsTo>
-                <avoidCallsTo>org.apache.commons.logging</avoidCallsTo>
-              </avoidCallsTo>
-            </configuration>
-          </plugin>
           <plugin>
             <groupId>net.revelc.code.formatter</groupId>
             <artifactId>formatter-maven-plugin</artifactId>
@@ -280,6 +216,12 @@
             <phase>${surefire.test.phase}</phase>
           </execution>
         </executions>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>io.github.git-commit-id</groupId>
